# StupidBot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  local_start.py  main.py  pyproject.toml
conf/: .env.example  config.py  logging.conf.yml
docker/: Dockerfile
nginx/: nginx.conf
scripts/: get_webhook_url.sh
scripts/ngrok/: entrypoint.sh
scripts/web/: get_ngrok_url.sh  startup.sh
src/: logger.py  main_polling.py
src/api/tg/: __init__.py  tg.py
src/handlers/private/: main.py  router.py  texts.py
src/integrations/: tg_bot.py
src/on_startup/: dispatcher.py  webhook.py
src/utils/: attachments.py
