[tool.black]
line-length = 120
target-version = ["py314"]
skip-string-normalization = true
exclude = '''
^/(
  (
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | alembic
    | backend_utils
    | venv
  )/
)
'''

[tool.isort]
line_length = 120
combine_as_imports = true
order_by_type = true
length_sort_straight = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
known_local_folder = ['webapp', 'backend_utils', 'conf']
extend_skip = ["backend_utils", "alembic", "*pypoetry*"]

[tool.poetry]
name = "Tg-Bot VLIQ Manager"
version = "0.1.0"
description = ""
authors = ["Vladislav Nesterov"]
#package-mode = false

[tool.poetry.dependencies]
aiogram = "^3.23.0"
python = ">=3.14,<3.15"
fastapi = "^0.127.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
uvloop = "^0.22.1"
pydantic = { extras = ["dotenv"], version = "^2.10.0" }
pydantic-settings = "^2.6.0"
orjson = "^3.10.0"
PyYAML = "^6.0.2"
httpx = "^0.28.0"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.0"
black = "^25.12.0"
flake8 = "^7.1.0"
flake8-black = "^0.4.0"
flake8-bugbear = "^25.11.29"
flake8-coding = "^1.3.2"
flake8-comprehensions = "^3.17.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-executable = "^2.1.3"
flake8-isort = "^7.0.0"
flake8-logging-format = "^0.9.0"
flake8-pie = "^0.16.0"
flake8-pytest-style = "^2.2.0"
flake8-quotes = "^3.3.3"
flake8-simplify = "^0.22.0"
isort = "^5.13.0"
types-PyYAML = "^6.0.12.12"
mypy = "^1.11.0"
pytest = "^9.0.2"
pytest-env = "^1.1.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^1.3.0"
pytest-freezegun = "^0.4.2"

[tool.pytest.ini_options]
addopts = "--failed-first --exitfirst --showlocals --cov=."
asyncio_mode = "auto"
python_files = "tests.py test_*.py"
python_functions = "test_*"
testpaths = ["tests"]
env = [

]

[tool.coverage.run]
omit = [
    #"alembic*/*",
    #"scripts/*",
    #"tests/*",
    #"webapp/__main__.py", # local run
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = false
exclude = [
    # "^alembic/",
    # "^conf/",
    # "^tests/",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false  # to allow parsing
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "aiocache.*",
    "aioredis.*",
    "aioretry.*",
    "asyncpg.*", # https://github.com/MagicStack/asyncpg/issues/569
    "cache.*",
    "gunicorn.*",
    "msgpack",
    "prometheus_client.*",
    "pythonjsonlogger.*",
    "starlette_prometheus.*",
    "uvicorn.*",
    "xxhash.*",
    "httpx.*",
]
ignore_missing_imports = true